--- a/ios-telemed/Base.lproj/Main.storyboard
+++ b/ios-telemed/Base.lproj/Main.storyboard
@@ -26,7 +26,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="719" y="600"/>
+            <point key="canvasLocation" x="1391.2" y="607.64617691154433"/>
         </scene>
         <!--Gyógyszerek-->
         <scene sceneID="eBT-me-8kB">
@@ -39,13 +39,32 @@
                     <view key="view" contentMode="scaleToFill" id="lhg-c3-hoC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="CQe-Sa-2Va">
+                                <rect key="frame" x="0.0" y="20" width="375" height="598"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="MedCell" id="WEp-kH-Xny">
+                                        <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WEp-kH-Xny" id="7Jl-rb-JgZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </tableViewCellContentView>
+                                    </tableViewCell>
+                                </prototypes>
+                            </tableView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Gyógyszerek" id="l3b-MK-iV0"/>
+                    <navigationItem key="navigationItem" title="Gyógyszerek" id="Wxv-Ef-Zmk">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="SYH-8S-cPc"/>
+                    </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QDc-Qd-wYx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-42" y="639"/>
+            <point key="canvasLocation" x="-31" y="608"/>
         </scene>
         <!--Napló-->
         <scene sceneID="Z2T-nJ-ohs">
@@ -64,7 +83,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RGy-o1-ko8" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1090" y="608"/>
+            <point key="canvasLocation" x="-1863" y="573"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="W9T-hG-JNA">
@@ -77,13 +96,32 @@
                     </tabBar>
                     <connections>
                         <segue destination="oAM-Kj-ZA8" kind="relationship" relationship="viewControllers" id="siO-Ap-Wdg"/>
-                        <segue destination="Ifb-Xc-vjg" kind="relationship" relationship="viewControllers" id="vbI-UI-7ao"/>
+                        <segue destination="qRj-OH-Rst" kind="relationship" relationship="viewControllers" id="vbI-UI-7ao"/>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Mwm-ze-idv"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ObD-Di-8dk" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-57" y="-224"/>
+        </scene>
+        <!--Gyógyszerek-->
+        <scene sceneID="ktb-3q-vgp">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qRj-OH-Rst" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Gyógyszerek" id="l3b-MK-iV0"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="xwU-R4-yed">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Ifb-Xc-vjg" kind="relationship" relationship="rootViewController" id="Nyj-nm-Ek6"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="tGM-8c-8ei" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-806" y="608"/>
         </scene>
     </scenes>
 </document>
