--- a/ios-telemed/Base.lproj/Main.storyboard
+++ b/ios-telemed/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="zIi-VH-dPb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="zIi-VH-dPb">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Időpontok-->
+        <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ios_telemed" customModuleProvider="target" sceneMemberID="viewController">
@@ -23,16 +23,16 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Időpontok" id="mp5-8O-WHM"/>
+                    <navigationItem key="navigationItem" id="DUb-Cy-XMI"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2330.4000000000001" y="607.64617691154433"/>
+            <point key="canvasLocation" x="2822" y="573"/>
         </scene>
         <!--Gyógyszerek-->
         <scene sceneID="eBT-me-8kB">
             <objects>
-                <viewController id="Ifb-Xc-vjg" sceneMemberID="viewController">
+                <viewController id="Ifb-Xc-vjg" customClass="GyogyszerViewController" customModule="ios_telemed" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Ra4-Ao-ZTm"/>
                         <viewControllerLayoutGuide type="bottom" id="IFJ-sj-1Rv"/>
@@ -50,7 +50,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WEp-kH-Xny" id="7Jl-rb-JgZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -60,12 +60,19 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                     <navigationItem key="navigationItem" title="Gyógyszerek" id="Wxv-Ef-Zmk">
-                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="SYH-8S-cPc"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="eB8-Sv-1u6">
+                            <connections>
+                                <action selector="addItem:" destination="Ifb-Xc-vjg" id="jOj-nX-E80"/>
+                            </connections>
+                        </barButtonItem>
                     </navigationItem>
+                    <connections>
+                        <outlet property="addButton" destination="eB8-Sv-1u6" id="WZp-Rj-C2Z"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="QDc-Qd-wYx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="908" y="607.64617691154433"/>
+            <point key="canvasLocation" x="982" y="573"/>
         </scene>
         <!--Napló-->
         <scene sceneID="Z2T-nJ-ohs">
@@ -158,7 +165,7 @@
                     <connections>
                         <segue destination="cTL-Y5-Vrr" kind="relationship" relationship="viewControllers" id="siO-Ap-Wdg"/>
                         <segue destination="qRj-OH-Rst" kind="relationship" relationship="viewControllers" id="vbI-UI-7ao"/>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Mwm-ze-idv"/>
+                        <segue destination="5iz-a5-Ehu" kind="relationship" relationship="viewControllers" id="Mwm-ze-idv"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ObD-Di-8dk" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -182,7 +189,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tGM-8c-8ei" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="132" y="607.64617691154433"/>
+            <point key="canvasLocation" x="132" y="573"/>
         </scene>
         <!--Napló-->
         <scene sceneID="06d-Zw-vTa">
@@ -202,6 +209,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cJf-1F-0af" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1863.2" y="572.56371814092961"/>
+        </scene>
+        <!--Időpontok-->
+        <scene sceneID="2q7-KM-lFS">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5iz-a5-Ehu" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Időpontok" id="mp5-8O-WHM"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="S8l-LE-H43">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="HjB-s1-85R"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="KMD-wP-F0F" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1940" y="573"/>
         </scene>
     </scenes>
 </document>
