--- a/ios-telemed/Base.lproj/Main.storyboard
+++ b/ios-telemed/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16A323" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="zIi-VH-dPb">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="zIi-VH-dPb">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -50,7 +50,7 @@
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="WEp-kH-Xny" id="7Jl-rb-JgZ">
-                                            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -176,7 +176,7 @@
         <scene sceneID="ktb-3q-vgp">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qRj-OH-Rst" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Gyógyszerek" id="l3b-MK-iV0"/>
+                    <tabBarItem key="tabBarItem" title="Gyógyszerek" image="medicine" id="l3b-MK-iV0"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="xwU-R4-yed">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -195,7 +195,7 @@
         <scene sceneID="06d-Zw-vTa">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="cTL-Y5-Vrr" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Napló" id="jS5-VJ-tvI"/>
+                    <tabBarItem key="tabBarItem" title="Napló" image="history" id="jS5-VJ-tvI"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="X3e-Ng-4Uh">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -214,7 +214,7 @@
         <scene sceneID="2q7-KM-lFS">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5iz-a5-Ehu" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Időpontok" id="mp5-8O-WHM"/>
+                    <tabBarItem key="tabBarItem" title="Időpontok" image="calendar" id="mp5-8O-WHM"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="S8l-LE-H43">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
@@ -230,4 +230,9 @@
             <point key="canvasLocation" x="1940" y="573"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="calendar" width="30" height="30"/>
+        <image name="history" width="30" height="30"/>
+        <image name="medicine" width="30" height="30"/>
+    </resources>
 </document>
